[tool.poetry]
name = "webship"
version = "0.1.2"
description = "Tools to deploy python web application"
authors = ["kamal <kamal@lalokalabs.co>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/lalokalabs/webship"
repository = "https://github.com/lalokalabs/webship"

[tool.poetry.dependencies]
python = "^3.8"
fabric2 = "^2.5.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
webship = 'webship:program.run'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
